--- a/src/pages/all-about-carbon/case-studies/ibmcom-case-study.mdx
+++ b/src/pages/all-about-carbon/case-studies/ibmcom-case-study.mdx
@@ -15,17 +15,18 @@ of the new self-service purchase experience on IBM.com.
 
 <AnchorLinks>
 
-<AnchorLink>Executive summary</AnchorLink>
+<AnchorLink>Summary</AnchorLink>
 <AnchorLink>The challenge</AnchorLink>
 <AnchorLink>Proposed solution</AnchorLink>
-<AnchorLink>The approach</AnchorLink>
+<AnchorLink>Our approach</AnchorLink>
 <AnchorLink>Benefits</AnchorLink>
 <AnchorLink>Positive outcomes</AnchorLink>
 <AnchorLink>Next steps</AnchorLink>
+<AnchorLink>Related resources</AnchorLink>
 
 </AnchorLinks>
 
-## Executive summary
+## Summary
 
 This section provides a succinct and effective summary that is quick to read,
 and covers the key highlights and takeaways.
@@ -91,11 +92,14 @@ to support.
 If we could improve these pages especially for returning users, can easily find
 earlier work, then this a win-win for everyone.
 
-Knew what they would get from the Carbon refresh
+Knew what they would get from the Carbon refresh:
 
 - be better for the user
+
 - wouldn't get lost in the flow,
+
 - could find what they need,
+
 - less likely to defect
 
 Will it grow revenue? Funnel analysis beforehand made it clear that even small
@@ -127,7 +131,7 @@ everyone.
 
 - compelling metrics slide a little hard to read
 
-## The approach
+## Our approach
 
 Took on Carbon as an iterative process. Rolled it out slowly. Tactfully and
 tastefully. Shixie working closely with the development squad.
@@ -144,11 +148,15 @@ Started small with a modal that pops up to get the team used to using Carbon
 
 - Instead of reskinning existing elements, we identified high value,
   self-contained, new features to develop in Carbon from scratch.
+
 - Team not worried about breaking something in production, safe place to
   experiment and ship, and see results, this way they wouldn't be losing as much
   money if the feature broke something
+
 - Took about a month because the team was new to Carbon
+
 - Not very disruptive to have the new modal on the old page
+
 - It's okay to ship out pieces iteratively. Encourage people to mix experiences
   to eventually get to the final result faster, otherwise flipping the switch on
   everything at once takes too long and can be risky.
@@ -157,8 +165,10 @@ Started small with a modal that pops up to get the team used to using Carbon
 
 - Another part of the process was spending an hour or two with the dev team to
   learn about the design system. A crash course. It was really fast.
+
 - Objective was to get the designers and devs on the same page in terms of
   language so that the implementation goes faster.
+
 - Quiz and tooling training (it looks like with Abstract as one of the tools)
 
 ### Mix new with old
@@ -190,7 +200,9 @@ Iterative process to implement. Changing the layout of the pages. Done in small
 passes:
 
 - switching fields into Carbon fields, but maintaining the structure
+
 - then the buttons change
+
 - at some point, people may not even notice that the complete experience has
   changed, setting the stage for next gen proposal
 
@@ -243,3 +255,9 @@ Maybe work out a way to include user quotes in here.
 - Next, currently working on the configuration page.
 - When we have the complete end-to-end flow live, we'll continue to increase our
   conversions.
+
+## Related resources
+
+- IBM.com makers, go to
+  [Carbon for IBM.com](https://www.ibm.com/standards/web/carbon-for-ibm-dotcom/)
+  for resources to create pages for IBM.com.
