Add single step tearsheet info

--- a/src/pages/community/patterns/create-flows/index.mdx
+++ b/src/pages/community/patterns/create-flows/index.mdx
@@ -9,7 +9,7 @@ description:
 
 #### Maintainers:
 
-[Andrew Smith](https://w3.ibm.com/bluepages/profile.html?uid=4G8681897)
+[Andrew Smith](https://w3.ibm.com/bluepages/profile.html?uid=4G8681897), 
 [Andrea Garcia](https://w3.ibm.com/bluepages/profile.html?uid=4G0746897)
 
 ## Overview
@@ -206,6 +206,16 @@ respectively.
    The "Next" button will change to "Create" on the last step of creation.
    "Cancel" closes the tearsheet and cancels the create action.
 
+### Alignment
+
+<Row>
+<Column colLg={8}>
+
+![Wide tearsheet alignment](images/Wide-tearsheet-7.png)
+
+</Column>
+</Row>
+
 <InlineNotification>
 Coming soon from Carbon, 80px tall fluid buttons will be the new standard
 replacing the 64px fluid buttons in the bottom sticky footer. Image reference
@@ -229,24 +239,6 @@ below.
 <Caption>Alternative left panel width of 320px</Caption>
 </Column>
 </Row>
-
-### Alignment
-
-<Row>
-<Column colLg={8}>
-
-![Wide tearsheet alignment](images/Wide-tearsheet-7.png)
-
-</Column>
-</Row>
-
-#### Do:
-
-- Use with creations that have two or more distinct steps.
-
-#### Don't:
-
-- Don't use the Wide tearsheet for low complexity create flows with only one step.
 
 ### Behaviors, structure and functionality
 
@@ -287,6 +279,16 @@ the changes won't be saved.
 </Column>
 </Row>
 
+#### Do:
+
+- Use with creations that have two or more distinct steps.
+- Omit the progress indicator to use with single step creations that require more 
+  space, such as those with interactive selections, diagrams, or tables.
+
+#### Don't:
+
+- Don't use the Wide tearsheet for low complexity create flows with only one step.
+
 ## Full page
 
 <InlineNotification>
@@ -320,6 +322,16 @@ the changes won't be saved.
    "Create" on the last step of creation. "Cancel" takes the user to the
    previous page and cancels the create action.
 
+### Alignment
+
+<Row>
+<Column colLg={8}>
+
+![Full page alignment](images/Full-page-3.png)
+
+</Column>
+</Row>
+
 <InlineNotification>
 Coming soon from Carbon, 80px tall fluid buttons will be the new standard
 replacing the 64px fluid buttons in the bottom sticky footer. Image reference
@@ -335,15 +347,12 @@ below.
 </Column>
 </Row>
 
-### Alignment
+### Behaviours, structure, and functionality
 
-<Row>
-<Column colLg={8}>
-
-![Full page alignment](images/Full-page-3.png)
-
-</Column>
-</Row>
+Full page Create flows can include an optional Toggle to show all the steps on a
+single scrolling page with anchor links. Toggling to "Show all available
+options" will replace the progress indicator with the In-page navigation anchor
+links.
 
 #### Do:
 
@@ -359,13 +368,6 @@ below.
 - For IBM Public Cloud, do not use this when provisioning a service directly
   from the Catalog, or when creating a non-billable resource that could happen
   in a side panel/in context.
-
-### Behaviours, structure, and functionality
-
-Full page Create flows can include an optional Toggle to show all the steps on a
-single scrolling page with anchor links. Toggling to "Show all available
-options" will replace the progress indicator with the In-page navigation anchor
-links.
 
 ## Creation
 
