docs: partners page H3 heading change

--- a/src/pages/all-about-carbon/partners.mdx
+++ b/src/pages/all-about-carbon/partners.mdx
@@ -2,8 +2,8 @@
 title: Partners
 description:
   Carbon is not just one team. To sustain productive contribution and maintain a
-  clear direction for Carbon as a whole, various groups work together to
-  provide direction, governance, and support.
+  clear direction for Carbon as a whole, various groups work together to provide
+  direction, governance, and support.
 ---
 
 <PageDescription>
@@ -20,7 +20,7 @@ The Carbon Design System steering committee provides oversight and direction for
 Carbon and its design and development community. It is made up of Carbon
 practitioners to ensure Carbon stays true to the community we're serving.
 
-### Responsibilities
+### Committee responsibilities
 
 - Improve design strategy, quality, and consistency within the design system and
   our guidance to ensure excellence.
@@ -115,7 +115,7 @@ The Carbon advisory board is comprised of executives across the company who
 advise on the direction of Carbon and ensure top level buy-in and resource
 allocation to support Carbon's work.
 
-### Responsibilities
+### Board responsibilities
 
 - Champion Carbon adoption and Carbon standards within their organization.
 - Where possible, commit to engaging design or development resources from within
