fix(developer-resources): 1953-aat-avt1-developer-resources-alt-text

--- a/src/pages/developing/dev-resources/index.mdx
+++ b/src/pages/developing/dev-resources/index.mdx
@@ -127,7 +127,7 @@ your framework of choice.
     href="https://github.com/carbon-design-system/devtools"
     >
 
-![](/images/carbon-devtools.png)
+![](/images/carbon-devtools-extension.png)
 
   </ResourceCard>
 </Column>
