Remove References for now, new 2x images

--- a/src/pages/community/patterns/create-flows/index.mdx
+++ b/src/pages/community/patterns/create-flows/index.mdx
@@ -60,7 +60,7 @@ respectively.
 <Row>
 <Column colLg={8}>
 
-![Anatomy of a create modal](images/ModalSingleStepAnatomy.png)
+![Anatomy of a create modal](images/ModalAnatomy.jpg)
 
 </Column>
 </Row>
@@ -80,7 +80,7 @@ respectively.
 <Row>
 <Column colLg={8}>
 
-![Alignment of a create modal](images/ModalSingleStepAlignment.png)
+![Alignment of a create modal](images/ModalAlignment.jpg)
 
 </Column>
 </Row>
@@ -104,7 +104,7 @@ respectively.
 <Row>
 <Column colLg={8}>
 
-![Anatomy of a create side panel](images/SidePanelAnatomy.png)
+![Anatomy of a create side panel](images/SidePanelAnatomy.jpg)
 
 </Column>
 </Row>
@@ -124,7 +124,7 @@ respectively.
 <Row>
 <Column colLg={8}>
 
-![Alignment of a create side panel](images/SidePanelAlignment.png)
+![Alignment of a create side panel](images/SidePanelAlignment.jpg)
 
 </Column>
 </Row>
@@ -146,7 +146,7 @@ respectively.
 <Row>
 <Column colLg={8}>
 
-![Anatomy of narrow tearsheets](images/Narrow-tearsheet-1.png)
+![Anatomy of narrow tearsheets](images/NarrowTearsheetAnatomy.jpg)
 
 </Column>
 </Row>
@@ -164,7 +164,7 @@ respectively.
 <Row>
 <Column colLg={8}>
 
-![Narrow tearsheet alignment](images/Narrow-Tearsheet-2.png)
+![Narrow tearsheet alignment](images/NarrowTearsheetAlignment.jpg)
 
 </Column>
 </Row>
@@ -186,7 +186,7 @@ respectively.
 <Row>
 <Column colLg={8}>
 
-![Anatomy of a wide tearsheet](images/Wide-tearsheet-1.png)
+![Anatomy of a wide tearsheet](images/WideTearsheetAnatomy.jpg)
 
 </Column>
 </Row>
@@ -211,7 +211,7 @@ respectively.
 <Row>
 <Column colLg={8}>
 
-![Wide tearsheet alignment](images/Wide-tearsheet-7.png)
+![Wide tearsheet alignment](images/WideTearsheetAlignment.jpg)
 
 </Column>
 </Row>
@@ -225,7 +225,7 @@ below.
 <Row>
 <Column colLg={8}>
 
-![Upcoming 80px fluid button height in the wide tearsheet](images/Wide-tearsheet-3.png)
+![Upcoming 80px fluid button height in the wide tearsheet](images/WideTearsheetAlignment80px.jpg)
 
 <Caption>Upcoming 80px fluid button height in the wide tearsheet</Caption>
 </Column>
@@ -234,7 +234,7 @@ below.
 <Row>
 <Column colLg={8}>
 
-![Alternative left panel width of 320px](images/Wide-tearsheet-4.png)
+![Alternative left panel width of 320px](images/WideTearsheetAlternateWidth.jpg)
 
 <Caption>Alternative left panel width of 320px</Caption>
 </Column>
@@ -255,7 +255,7 @@ the changes won't be saved.
 <Row>
 <Column colLg={8}>
 
-![Toggle view - show all available options](images/Wide-tearsheet-5.png)
+![Toggle view - show all available options](images/WideTearsheetShowAllOptions.jpg)
 
 <Caption>Toggle view - show all available options</Caption>
 </Column>
@@ -273,7 +273,7 @@ the changes won't be saved.
 <Row>
 <Column colLg={8}>
 
-![Toggle view - hide all available options warning modal](images/Wide-tearsheet-6.png)
+![Toggle view - hide all available options warning modal](images/WideTearsheetConfirmModal.jpg)
 
 <Caption>Toggle view - hide all available options warning modal</Caption>
 </Column>
@@ -301,7 +301,7 @@ the changes won't be saved.
 <Row>
 <Column colLg={8}>
 
-![Full page anatomy](images/Full-page-1.png)
+![Full page anatomy](images/FullPageAnatomy.jpg)
 
 </Column>
 </Row>
@@ -327,7 +327,7 @@ the changes won't be saved.
 <Row>
 <Column colLg={8}>
 
-![Full page alignment](images/Full-page-3.png)
+![Full page alignment](images/FullPageAlignment.jpg)
 
 </Column>
 </Row>
@@ -341,7 +341,7 @@ below.
 <Row>
 <Column colLg={8}>
 
-![Upcoming 80px fluid button height in the Full-page flow](images/Full-page-2.png)
+![Upcoming 80px fluid button height in the Full-page flow](images/FullPageAlignment80px.jpg)
 
 <Caption>Upcoming 80px fluid button height in the Full-page flow</Caption>
 </Column>
@@ -427,27 +427,16 @@ and [Progress indicator](https://www.carbondesignsystem.com/components/progress-
 ## Related
 
 - [Modal](https://www.carbondesignsystem.com/components/modal/usage/)
-- Narrow tearsheet
-- Wide tearsheet
+- Narrow tearsheet (Coming soon)
+- Wide tearsheet (Coming soon)
 - [Form](https://www.carbondesignsystem.com/patterns/forms-pattern/)
 - [Toggle](https://www.carbondesignsystem.com/components/toggle/usage)
 - [Page header](https://pages.github.ibm.com/cdai-design/pal/components/page-header/usage)
 - [Progress indicator](https://www.carbondesignsystem.com/components/progress-indicator/usage)
-- Sticky footer
-
-## References 
-
-Help designers understand your process by explaining your rationale for the way
-you implemented the pattern. Include any research, citations, books or articles
-that you found helpful.
+- Sticky footer (Coming soon)
 
 ## Feedback 
 
 Help us improve this pattern by providing feedback, asking questions, and
 leaving any other comments on
 [GitHub](https://github.com/carbon-design-system/carbon-website/issues/new?assignees=&labels=feedback&template=feedback.md).
-
-## Sketch File
-
-Provide a [Sketch file](https://www.sketch.com/docs/getting-started/) with any
-symbols you've created in the development of this pattern.
