--- a/src/pages/components/data-table/code.mdx
+++ b/src/pages/components/data-table/code.mdx
@@ -89,15 +89,13 @@ usage documentation, see the Storybooks for each framework below.
         'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--minimal',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
     }}>
-    {`<DataTable
-    rows={rowData}
-    headers={headerData}
-    render={({ rows, headers, getHeaderProps, getTableProps }) => (
+    {`<DataTable rows={rowData} headers={headerData}>
+  {({ rows, headers, getHeaderProps, getTableProps }) => (
     <TableContainer title="DataTable">
       <Table {...getTableProps()}>
         <TableHead>
           <TableRow>
-            {headers.map(header => (
+            {headers.map((header) => (
               <TableHeader {...getHeaderProps({ header })}>
                 {header.header}
               </TableHeader>
@@ -105,17 +103,18 @@ usage documentation, see the Storybooks for each framework below.
           </TableRow>
         </TableHead>
         <TableBody>
-          {rows.map(row => (
+          {rows.map((row) => (
             <TableRow key={row.id}>
-              {row.cells.map(cell => (
+              {row.cells.map((cell) => (
                 <TableCell key={cell.id}>{cell.value}</TableCell>
               ))}
             </TableRow>
           ))}
         </TableBody>
       </Table>
-    </TableContainer>)}
-    />`}
+    </TableContainer>
+  )}
+</DataTable>`}
   </ComponentVariant>
   <ComponentVariant
     id="with-selection"
@@ -129,35 +128,41 @@ usage documentation, see the Storybooks for each framework below.
         'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
     }}>
-    {`<DataTable
-  rows={rowData}
-  headers={headerData}
-  render={({ rows, headers, getHeaderProps, getSelectionProps, getRowProps, getTableProps }) => (
-  <TableContainer title="DataTable with selection">
-    <Table {...getTableProps()}>
-      <TableHead>
-        <TableRow>
-          <TableSelectAll {...getSelectionProps()} />
-          {headers.map(header => (
-            <TableHeader {...getHeaderProps({ header })}>
-              {header.header}
-            </TableHeader>
-          ))}
-        </TableRow>
-      </TableHead>
-      <TableBody>
-        {rows.map(row => (
-          <TableRow {...getRowProps({ row })}>
-            <TableSelectRow {...getSelectionProps({ row })} />
-            {row.cells.map(cell => (
-              <TableCell key={cell.id}>{cell.value}</TableCell>
+    {`<DataTable rows={rowData} headers={headerData}>
+  {({
+    rows,
+    headers,
+    getHeaderProps,
+    getSelectionProps,
+    getRowProps,
+    getTableProps,
+  }) => (
+    <TableContainer title="DataTable with selection">
+      <Table {...getTableProps()}>
+        <TableHead>
+          <TableRow>
+            <TableSelectAll {...getSelectionProps()} />
+            {headers.map((header) => (
+              <TableHeader {...getHeaderProps({ header })}>
+                {header.header}
+              </TableHeader>
             ))}
           </TableRow>
-        ))}
-      </TableBody>
-    </Table>
-  </TableContainer>)}
-/>`}
+        </TableHead>
+        <TableBody>
+          {rows.map((row) => (
+            <TableRow {...getRowProps({ row })}>
+              <TableSelectRow {...getSelectionProps({ row })} />
+              {row.cells.map((cell) => (
+                <TableCell key={cell.id}>{cell.value}</TableCell>
+              ))}
+            </TableRow>
+          ))}
+        </TableBody>
+      </Table>
+    </TableContainer>
+  )}
+</DataTable>`}
   </ComponentVariant>
   <ComponentVariant
     id="with-expansion"
@@ -173,39 +178,40 @@ usage documentation, see the Storybooks for each framework below.
     }}>
     {`<DataTable
   rows={rowData}
-  headers={headerData}
-  render={({ rows, headers, getHeaderProps, getRowProps, getTableProps }) => (
-  <TableContainer title="DataTable with expansion">
-    <Table {...getTableProps()}>
-      <TableHead>
-        <TableRow>
-          <TableExpandHeader />
-          {headers.map(header => (
-            <TableHeader {...getHeaderProps({ header })}>
-              {header.header}
-            </TableHeader>
-          ))}
-        </TableRow>
-      </TableHead>
-      <TableBody>
-        {rows.map(row => (
-          <React.Fragment key={row.id}>
-            <TableExpandRow {...getRowProps({ row })}>
-              {row.cells.map(cell => (
-                <TableCell key={cell.id}>{cell.value}</TableCell>
+  headers={headerData}>
+    {({ rows, headers, getHeaderProps, getRowProps, getTableProps }) => (
+      <TableContainer title="DataTable with expansion">
+        <Table {...getTableProps()}>
+          <TableHead>
+            <TableRow>
+              <TableExpandHeader />
+              {headers.map(header => (
+                <TableHeader {...getHeaderProps({ header })}>
+                  {header.header}
+                </TableHeader>
               ))}
-            </TableExpandRow>
-            {row.isExpanded && (
-              <TableExpandedRow colSpan={headers.length + 1}>
-                <p>Aux squad rules</p>
-              </TableExpandedRow>
-            )}
-          </React.Fragment>
-        ))}
-      </TableBody>
-    </Table>
-  </TableContainer>
-)}/>`}
+            </TableRow>
+          </TableHead>
+          <TableBody>
+            {rows.map(row => (
+              <React.Fragment key={row.id}>
+                <TableExpandRow {...getRowProps({ row })}>
+                  {row.cells.map(cell => (
+                    <TableCell key={cell.id}>{cell.value}</TableCell>
+                  ))}
+                </TableExpandRow>
+                {row.isExpanded && (
+                  <TableExpandedRow colSpan={headers.length + 1}>
+                    <p>Aux squad rules</p>
+                  </TableExpandedRow>
+                )}
+              </React.Fragment>
+            ))}
+          </TableBody>
+        </Table>
+      </TableContainer>
+    )}
+  </DataTable>`}
   </ComponentVariant>
   <ComponentVariant
     id="with-batch-actions"
@@ -218,89 +224,95 @@ usage documentation, see the Storybooks for each framework below.
         'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
     }}>
-    {`<DataTable
-  rows={rowData}
-  headers={headerData}
-  render={({ rows,
-      headers,
-      getHeaderProps,
-      getRowProps,
-      getSelectionProps,
-      getBatchActionProps,
-      onInputChange,
-      selectedRows,}) => (
-  <TableContainer title="DataTable with batch actions">
-    <TableToolbar>
-          <TableBatchActions {...getBatchActionProps()}>
-            <TableBatchAction
-              tabIndex={getBatchActionProps().shouldShowBatchActions ? 0 : -1}
-              renderIcon={Delete}
-              onClick={()=>console.log('clicked')}>
-              Delete
-            </TableBatchAction>
-            <TableBatchAction
-              tabIndex={getBatchActionProps().shouldShowBatchActions ? 0 : -1}
-              renderIcon={Save}
-              onClick={()=>console.log('clicked')}>
-              Save
-            </TableBatchAction>
-            <TableBatchAction
-              tabIndex={getBatchActionProps().shouldShowBatchActions ? 0 : -1}
-              renderIcon={Download}
-              onClick={()=>console.log('clicked')}>
-              Download
-            </TableBatchAction>
-          </TableBatchActions>
-          <TableToolbarContent>
-            <TableToolbarSearch
-              tabIndex={getBatchActionProps().shouldShowBatchActions ? -1 : 0}
-              onChange={onInputChange}
-            />
-            <TableToolbarMenu
-              tabIndex={getBatchActionProps().shouldShowBatchActions ? -1 : 0}>
-              <TableToolbarAction primaryFocus onClick={() => alert('Alert 1')}>
-                Action 1
-              </TableToolbarAction>
-              <TableToolbarAction onClick={() => alert('Alert 2')}>
-                Action 2
-              </TableToolbarAction>
-              <TableToolbarAction onClick={() => alert('Alert 3')}>
-                Action 3
-              </TableToolbarAction>
-            </TableToolbarMenu>
-            <Button
-              tabIndex={getBatchActionProps().shouldShowBatchActions ? -1 : 0}
-              onClick={()=> console.log('clicked')}
-              size="small"
-              kind="primary">
-              Add new
-            </Button>
-          </TableToolbarContent>
-        </TableToolbar>
-    <Table>
-      <TableHead>
-        <TableRow>
-          <TableSelectAll {...getSelectionProps()} />
-          {headers.map(header => (
-            <TableHeader {...getHeaderProps({ header })}>
-              {header.header}
-            </TableHeader>
-          ))}
-        </TableRow>
-      </TableHead>
-      <TableBody>
-        {rows.map(row => (
-          <TableRow {...getRowProps({ row })}>
-            <TableSelectRow {...getSelectionProps({ row })} />
-            {row.cells.map(cell => (
-              <TableCell key={cell.id}>{cell.value}</TableCell>
+    {`<DataTable rows={rowData} headers={headerData}>
+  {({
+    rows,
+    headers,
+    getHeaderProps,
+    getRowProps,
+    getSelectionProps,
+    getBatchActionProps,
+    onInputChange,
+    selectedRows,
+  }) => (
+    <TableContainer title="DataTable with batch actions">
+      <TableToolbar>
+        <TableBatchActions {...getBatchActionProps()}>
+          <TableBatchAction
+            tabIndex={getBatchActionProps().shouldShowBatchActions ? 0 : -1}
+            renderIcon={Delete}
+            onClick={() => console.log('clicked')}
+          >
+            Delete
+          </TableBatchAction>
+          <TableBatchAction
+            tabIndex={getBatchActionProps().shouldShowBatchActions ? 0 : -1}
+            renderIcon={Save}
+            onClick={() => console.log('clicked')}
+          >
+            Save
+          </TableBatchAction>
+          <TableBatchAction
+            tabIndex={getBatchActionProps().shouldShowBatchActions ? 0 : -1}
+            renderIcon={Download}
+            onClick={() => console.log('clicked')}
+          >
+            Download
+          </TableBatchAction>
+        </TableBatchActions>
+        <TableToolbarContent>
+          <TableToolbarSearch
+            tabIndex={getBatchActionProps().shouldShowBatchActions ? -1 : 0}
+            onChange={onInputChange}
+          />
+          <TableToolbarMenu
+            tabIndex={getBatchActionProps().shouldShowBatchActions ? -1 : 0}
+          >
+            <TableToolbarAction primaryFocus onClick={() => alert('Alert 1')}>
+              Action 1
+            </TableToolbarAction>
+            <TableToolbarAction onClick={() => alert('Alert 2')}>
+              Action 2
+            </TableToolbarAction>
+            <TableToolbarAction onClick={() => alert('Alert 3')}>
+              Action 3
+            </TableToolbarAction>
+          </TableToolbarMenu>
+          <Button
+            tabIndex={getBatchActionProps().shouldShowBatchActions ? -1 : 0}
+            onClick={() => console.log('clicked')}
+            size="small"
+            kind="primary"
+          >
+            Add new
+          </Button>
+        </TableToolbarContent>
+      </TableToolbar>
+      <Table>
+        <TableHead>
+          <TableRow>
+            <TableSelectAll {...getSelectionProps()} />
+            {headers.map((header) => (
+              <TableHeader {...getHeaderProps({ header })}>
+                {header.header}
+              </TableHeader>
             ))}
           </TableRow>
-        ))}
-      </TableBody>
-    </Table>
-  </TableContainer>)}
-/>`}
+        </TableHead>
+        <TableBody>
+          {rows.map((row) => (
+            <TableRow {...getRowProps({ row })}>
+              <TableSelectRow {...getSelectionProps({ row })} />
+              {row.cells.map((cell) => (
+                <TableCell key={cell.id}>{cell.value}</TableCell>
+              ))}
+            </TableRow>
+          ))}
+        </TableBody>
+      </Table>
+    </TableContainer>
+  )}
+</DataTable>`}
   </ComponentVariant>
 </ComponentDemo>
 
