--- a/src/pages/community/patterns/generate-an-api-key/index.mdx
+++ b/src/pages/community/patterns/generate-an-api-key/index.mdx
@@ -154,8 +154,8 @@ instructions for doing so.
 
 #### API key cannot be retrieved at a later date
 
-If a user cannot retrieve the API key in the future, warn them in the modal. Provide
-the user the option to download the key as JSON.
+If a user cannot retrieve the API key in the future, warn them in the modal.
+Provide the user the option to download the key as JSON.
 
 <Row>
 <Column colLg={6}>
