--- a/src/pages/contributing/bugs-and-requests.mdx
+++ b/src/pages/contributing/bugs-and-requests.mdx
@@ -51,9 +51,8 @@ unsure which repo to use, please open an issue in the
 ### GitHub pull requests
 
 If you have a specific fix or contribution, start by generating a pull request
-in the appropriate
-[Carbon repo](/developing/dev-resources#github-repos).
-Here are detailed
+in the appropriate [Carbon repo](/developing/dev-resources#github-repos). Here
+are detailed
 [instructions](https://github.com/carbon-design-system/carbon-website/wiki/Creating-a-PR-through-github.com-UI)
 for forking the repo and opening a pull request.
 
