--- a/src/pages/data-visualization/advanced-charts/index.mdx
+++ b/src/pages/data-visualization/advanced-charts/index.mdx
@@ -131,11 +131,11 @@ neutral midpoint is often referred to as the "inflection point" (for example, a
 0 value midway between -100 and +100).
 
 [Divergent scales](../data-visualization/color-palettes#diverging-palettes)
-require three colors for their correspondent values (min, max, and inflection point)
-and Carbon has provided two approved palettes for divergent visualizations.
-Although the examples here use the "discrete" (stepped scale) provided by the
-Carbon palette, divergent heat maps often leverage "continuous" values
-(gradients) to accommodate situations that require more than 10 values.
+require three colors for their correspondent values (min, max, and inflection
+point) and Carbon has provided two approved palettes for divergent
+visualizations. Although the examples here use the "discrete" (stepped scale)
+provided by the Carbon palette, divergent heat maps often leverage "continuous"
+values (gradients) to accommodate situations that require more than 10 values.
 
 #### Inflection points
 
