--- a/src/pages/developing/angular-tutorial/step-2.mdx
+++ b/src/pages/developing/angular-tutorial/step-2.mdx
@@ -486,12 +486,12 @@ that, add:
 ```
 
 Referencing the
-[spacing token table](/guidelines/spacing/overview#spacing-scale),
-`16px` can be set with the `$spacing-05` token. The design calls for `128px` of
-space below the heading and that's not in the spacing scale, we can achieve that
-in Sass by multiplying 32px (`$spacing-07`) by 4. We could use `128px` or `8rem`
-directly in our styling, but using our tokens preserves consistency should the
-token values get updated in the future.
+[spacing token table](/guidelines/spacing/overview#spacing-scale), `16px` can be
+set with the `$spacing-05` token. The design calls for `128px` of space below
+the heading and that's not in the spacing scale, we can achieve that in Sass by
+multiplying 32px (`$spacing-07`) by 4. We could use `128px` or `8rem` directly
+in our styling, but using our tokens preserves consistency should the token
+values get updated in the future.
 
 Looking at the design, we need a wall-to-wall light gray background behind the
 banner and also behind the third row. This is a great opportunity to use a Sass
