--- a/src/pages/developing/vue-tutorial/step-2.mdx
+++ b/src/pages/developing/vue-tutorial/step-2.mdx
@@ -396,10 +396,9 @@ for now.
 
 We've added basic layout styles in `LandingPage.vue`, so now let's add type,
 color and spacing styles to match the design. We'll be using our
-[spacing tokens](/guidelines/spacing/overview#spacing-scale). In a
-new file `src/styles/_carbon-utils.scss`, add these imports at the **top** of
-the file so we can use Carbon breakpoints, tokens, and typography Sass mixins
-and functions:
+[spacing tokens](/guidelines/spacing/overview#spacing-scale). In a new file
+`src/styles/_carbon-utils.scss`, add these imports at the **top** of the file so
+we can use Carbon breakpoints, tokens, and typography Sass mixins and functions:
 
 ```scss path=src/styles/_carbon-utils.scss
 @import 'carbon-components/scss/globals/scss/vendor/@carbon/type/scss/font-family.scss';
@@ -446,12 +445,12 @@ with the other imports and
 ```
 
 Referencing the
-[spacing token table](/guidelines/spacing/overview#spacing-scale),
-`16px` can be set with the `$spacing-05` token. The design calls for `128px` of
-space below the heading and that's not in the spacing scale, we can achieve that
-in Sass by multiplying 32px (`$spacing-07`) by 4. We could use `128px` or `8rem`
-directly in our styling, but using our tokens preserves consistency should the
-token values get updated in the future.
+[spacing token table](/guidelines/spacing/overview#spacing-scale), `16px` can be
+set with the `$spacing-05` token. The design calls for `128px` of space below
+the heading and that's not in the spacing scale, we can achieve that in Sass by
+multiplying 32px (`$spacing-07`) by 4. We could use `128px` or `8rem` directly
+in our styling, but using our tokens preserves consistency should the token
+values get updated in the future.
 
 Looking at the design, we need a wall-to-wall light gray background behind the
 banner and also behind the third row. This is a great opportunity to use a Sass
