Fix bad image path - take 2

--- a/src/pages/community/patterns/create-flows/index.mdx
+++ b/src/pages/community/patterns/create-flows/index.mdx
@@ -301,7 +301,7 @@ the changes won't be saved.
 <Row>
 <Column colLg={8}>
 
-![Full page anatomy](images/FullPageAnatomy.jpg)
+![Full page anatomy](images/FullPageAnatomy80px.jpg)
 
 </Column>
 </Row>
@@ -327,7 +327,7 @@ the changes won't be saved.
 <Row>
 <Column colLg={8}>
 
-![Full page alignment](images/FullPageAlignment80px.jpg)
+![Full page alignment](images/FullPageAlignment.jpg)
 
 </Column>
 </Row>
