--- a/src/pages/components/UI-shell-header/style.mdx
+++ b/src/pages/components/UI-shell-header/style.mdx
@@ -46,15 +46,15 @@ Shell is from the
 
 | Class                           | Property         | Color value    |
 | ------------------------------- | ---------------- | -------------- |
-| `.bx--header__menu-item`        | text color       | Gray 30        |
-| `.bx--header__menu-item`        | svg              | Gray 30        |
+| `.bx--header__menu-item`        | text color       | Gray 10        |
+| `.bx--header__menu-item`        | svg              | Gray 10        |
 | `.bx--header__menu-item:hover`  | background color | Gray 100-hover |
-| `.bx--header__menu-item:hover`  | text color       | Gray 10        |
-| `.bx--header__menu-item:hover`  | svg              | Gray 10        |
+| `.bx--header__menu-item:hover`  | text color       | White          |
+| `.bx--header__menu-item:hover`  | svg              | White          |
 | `.bx--header__menu-item:focus`  | border           | White          |
 | `.bx--header__menu-item:active` | background color | Gray 80        |
-| `.bx--header__menu-item:active` | text color       | Gray 10        |
-| `.bx--header__menu-item:active` | svg              | Gray 10        |
+| `.bx--header__menu-item:active` | text color       | White          |
+| `.bx--header__menu-item:active` | svg              | White          |
 
 <Row>
 <Column colLg={8}>
@@ -71,12 +71,12 @@ Shell is from the
 | Class                         | Property         | Color value   |
 | ----------------------------- | ---------------- | ------------- |
 | `.bx--header__submenu`        | background color | Gray 90       |
-| `.bx--header__submenu`        | text color       | Gray 30       |
+| `.bx--header__submenu`        | text color       | Gray 10       |
 | `.bx--header__submenu:hover`  | background color | Gray 90-hover |
-| `.bx--header__submenu:hover`  | text color       | Gray 10       |
+| `.bx--header__submenu:hover`  | text color       | White         |
 | `.bx--header__submenu:focus`  | border           | White         |
 | `.bx--header__submenu:active` | background color | Gray 70       |
-| `.bx--header__submenu:active` | text color       | Gray 10       |
+| `.bx--header__submenu:active` | text color       | White         |
 
 ![Sub-menu interactive states](images/header-style-7.png)
 
@@ -86,12 +86,12 @@ Shell is from the
 
 | Class                        | Property         | Color value    |
 | ---------------------------- | ---------------- | -------------- |
-| `.bx--header__action`        | fill             | Gray 30        |
+| `.bx--header__action`        | fill             | Gray 10        |
 | `.bx--header__action:hover`  | background color | Gray 100-hover |
-| `.bx--header__action:hover`  | fill             | Gray 10        |
+| `.bx--header__action:hover`  | fill             | White          |
 | `.bx--header__action:focus`  | border           | White          |
 | `.bx--header__action:active` | background color | Gray 80        |
-| `.bx--header__action:active` | fill             | Gray 10        |
+| `.bx--header__action:active` | fill             | White          |
 
 <Row>
 <Column colLg={8}>
