--- a/src/pages/components/UI-shell-header/style.mdx
+++ b/src/pages/components/UI-shell-header/style.mdx
@@ -86,12 +86,15 @@ Shell is from the
 
 | Class                        | Property         | Color value    |
 | ---------------------------- | ---------------- | -------------- |
-| `.bx--header__action`        | fill             | Gray 30        |
+| `.bx--header__action`        | svg              | Gray 10        |
 | `.bx--header__action:hover`  | background color | Gray 100-hover |
-| `.bx--header__action:hover`  | fill             | Gray 10        |
+| `.bx--header__action:hover`  | svg              | White          |
 | `.bx--header__action:focus`  | border           | White          |
 | `.bx--header__action:active` | background color | Gray 80        |
-| `.bx--header__action:active` | fill             | Gray 10        |
+| `.bx--header__action:active` | svg              | White          |
+| `.bx--header__action:selected` | background color | Gray 100     |
+| `.bx--header__action:selected` | border         | Gray 80        |
+| `.bx--header__action:selected` | svg            | White          |
 
 <Row>
 <Column colLg={8}>
