--- a/src/pages/components/data-table/usage.mdx
+++ b/src/pages/components/data-table/usage.mdx
@@ -669,9 +669,9 @@ view the information and complete tasks.
 </Column>
 </Row>
 
-By default, the expand-all chevron is not shown. Keeping detailed information in
+By default, the expand-all chevron is not shown. Keeping detailed information in the
 expanded section saves user loading time by postponing some data queries until
-needed. Expanding all rows at once will typically negate this advantages of the
+needed. Expanding all rows at once will typically negate this advantage of the
 expandable table. If additional load time is expected to display expanded
 information, use skeleton states instead of spinners.
 
