added-margin-to-GIF

--- a/src/pages/community/patterns/create-flows/index.mdx
+++ b/src/pages/community/patterns/create-flows/index.mdx
@@ -9,7 +9,7 @@ description:
 
 #### Maintainers:
 
-[Andrew Smith](https://w3.ibm.com/bluepages/profile.html?uid=4G8681897), 
+[Andrew Smith](https://w3.ibm.com/bluepages/profile.html?uid=4G8681897),
 [Andrea Garcia](https://w3.ibm.com/bluepages/profile.html?uid=4G0746897)
 
 ## Overview
@@ -32,13 +32,18 @@ Do not use this pattern for adding or editing a resource.
 With quick, simple creations like that of an item, it is usually preferred to
 keep the flow inline. This is especially true when the user could benefit from
 seeing context in the page while creating. The inline create pattern is under
-construction, as it needs to account for many different use cases. Below is
-an example of an inline creation.
+construction, as it needs to account for many different use cases. Below is an
+example of an inline creation.
 
 <Row>
-<Column colLg={8}>
+<Column colLg={12}>
 
-![Animated inline create example](images/InlineCreateExample.gif)
+<img
+  src="/images/InlineCreateExample.gif"
+  alt="Animated inline create example"
+  title="Animated inline create example"
+  style="padding:3rem; background-color:#e0e0e0"
+/>
 
 <Caption>Example of an inline create</Caption> 
 </Column>
@@ -65,11 +70,10 @@ respectively.
 </Column>
 </Row>
 
-1. **Modal size & overlay: ** 
+1. **Modal size & overlay: **
    [Small Modal](https://www.carbondesignsystem.com/components/modal/style#small).
    Screen overlay that obscures the on-page content.
-2. **Create title:** Title line for the create flow with an optional
-   subtitle.
+2. **Create title:** Title line for the create flow with an optional subtitle.
 3. **Body:** Contains the information and/or controls needed to populate the
    task. It can include message text and components.
 4. **Buttons:** The primary and secondary buttons are "Create" and "Cancel",
@@ -104,16 +108,20 @@ respectively.
 <Row>
 <Column colLg={8}>
 
-![Anatomy of a create side panel](images/SidePanelAnatomy.jpg)
+<img
+  src="/images/SidePanelAnatomy.jpg"
+  alt="Anatomy of a create side panel"
+  title="Anatomy of a create side panel"
+  style="padding:3rem; background-color:#e0e0e0"
+/>
 
 </Column>
 </Row>
 
-1. **Panel size & non-focus state:** Side panel is 480px wide and has no overlay. 
-   This option supports a non-focus state execution. The user can create while 
-   still referencing on-page items.
-2. **Create title:** Title line for the create flow with an optional
-   subtitle.
+1. **Panel size & non-focus state:** Side panel is 480px wide and has no
+   overlay. This option supports a non-focus state execution. The user can
+   create while still referencing on-page items.
+2. **Create title:** Title line for the create flow with an optional subtitle.
 3. **Body:** Contains the information and/or controls needed to populate the
    task. It can include message text and components.
 4. **Buttons:** The primary and secondary buttons are "Create" and "Cancel",
@@ -124,20 +132,24 @@ respectively.
 <Row>
 <Column colLg={8}>
 
-![Alignment of a create side panel](images/SidePanelAlignment.jpg)
+<img
+  src="/images/SidePanelAlignment.jpg"
+  alt="Alignment of a create side panel"
+  title="Alignment of a create side panel"
+  style="padding:3rem; background-color:#e0e0e0"
+/>
 
 </Column>
 </Row>
 
 #### Do:
 
-- Use when the user needs to have page context while populating the side 
-  panel.
+- Use when the user needs to have page context while populating the side panel.
 
 #### Don't:
 
-- Don't use when the flow has high complexity and the user would benefit 
-  from having a visible progress indicator.
+- Don't use when the flow has high complexity and the user would benefit from
+  having a visible progress indicator.
 
 ## Narrow tearsheet
 
@@ -151,9 +163,9 @@ respectively.
 </Column>
 </Row>
 
-1. **Tearsheet & overlay**: Narrow tearsheet component with screen
-   overlay that obscures the on-page content.
-2. **Create title**: Title line for the create flow with an optional subtitle. 
+1. **Tearsheet & overlay**: Narrow tearsheet component with screen overlay that
+   obscures the on-page content.
+2. **Create title**: Title line for the create flow with an optional subtitle.
 3. **Body**: Contains the information and/or controls needed to populate the
    task. It can include message text and components.
 4. **Buttons**: The primary and secondary buttons are "Create" and "Cancel",
@@ -176,7 +188,7 @@ respectively.
 
 #### Don't:
 
-- Don't use this option if the flow has high complexity and the user would 
+- Don't use this option if the flow has high complexity and the user would
   benefit from having a visible progress indicator.
 
 ## Wide tearsheet
@@ -191,8 +203,8 @@ respectively.
 </Column>
 </Row>
 
-1. **Tearsheet & overlay**: Wide tearsheet component with screen overlay
-   that obscures the on-page content.
+1. **Tearsheet & overlay**: Wide tearsheet component with screen overlay that
+   obscures the on-page content.
 2. **Create title**: Title line for the create flow with an optional subtitle.
 3. **Progress indicator**: Vertical progress indicator lets the user know what
    step they are on. The default left panel width is 256px. An option of 320px
@@ -217,9 +229,9 @@ respectively.
 </Row>
 
 <InlineNotification>
-Coming soon from Carbon, 80px tall fluid buttons will be the new standard
-replacing the 64px fluid buttons in the bottom sticky footer. Image reference
-below.
+  Coming soon from Carbon, 80px tall fluid buttons will be the new standard
+  replacing the 64px fluid buttons in the bottom sticky footer. Image reference
+  below.
 </InlineNotification>
 
 <Row>
@@ -242,12 +254,11 @@ below.
 
 ### Behaviors, structure and functionality
 
-Wide tearsheet Create flows can include an optional Toggle to show all the steps on a
-single scrolling page with anchor links. Toggling to "Show all available
+Wide tearsheet Create flows can include an optional Toggle to show all the steps
+on a single scrolling page with anchor links. Toggling to "Show all available
 options" will replace the progress indicator with the In-page navigation anchor
 links. Depending on your use case, you may choose to persist the toggle to show
-all options for a particular Create flow if it will enhance the user
-experience.
+all options for a particular Create flow if it will enhance the user experience.
 
 If the user toggles off the advanced options, show a modal alerting them that
 the changes won't be saved.
@@ -282,12 +293,13 @@ the changes won't be saved.
 #### Do:
 
 - Use with creations that have two or more distinct steps.
-- Omit the progress indicator to use with single step creations that require more 
-  space, such as those with interactive selections, diagrams, or tables.
+- Omit the progress indicator to use with single step creations that require
+  more space, such as those with interactive selections, diagrams, or tables.
 
 #### Don't:
 
-- Don't use the Wide tearsheet for low complexity create flows with only one step.
+- Don't use the Wide tearsheet for low complexity create flows with only one
+  step.
 
 ## Full page
 
@@ -333,9 +345,9 @@ the changes won't be saved.
 </Row>
 
 <InlineNotification>
-Coming soon from Carbon, 80px tall fluid buttons will be the new standard
-replacing the 64px fluid buttons in the bottom sticky footer. Image reference
-below.
+  Coming soon from Carbon, 80px tall fluid buttons will be the new standard
+  replacing the 64px fluid buttons in the bottom sticky footer. Image reference
+  below.
 </InlineNotification>
 
 <Row>
@@ -356,14 +368,14 @@ links.
 
 #### Do:
 
-- In Cloud and Cognitive, the Full-page create flow is the process the user 
-  must complete in order to use a product or service.
+- In Cloud and Cognitive, the Full-page create flow is the process the user must
+  complete in order to use a product or service.
 - In IBM Cloud public, it is the alternative to the Provisioning flow for a
   non-billable service.
 
 #### Don't:
 
-- Don't use the Full-page option when the product or service is usable before 
+- Don't use the Full-page option when the product or service is usable before
   the current creation flow is initiated.
 - For IBM Public Cloud, do not use this when provisioning a service directly
   from the Catalog, or when creating a non-billable resource that could happen
@@ -388,8 +400,8 @@ button changes from "Next" to "Create". The "Next" and "Create" buttons should
 be disabled until the user has entered all required fields.
 
 The Modal, Side panel, Narrow tearsheet and Wide tearsheet components in a
-create flow will not have a close icon in the top right. This is to enforce
-the user's decision to exit the create flow by clicking on the word "Cancel".
+create flow will not have a close icon in the top right. This is to enforce the
+user's decision to exit the create flow by clicking on the word "Cancel".
 
 When the user clicks "Create" there should be an indication of loading or
 submitting. See Carbon's
@@ -418,11 +430,12 @@ banner notification. For errors, you must show an
 
 ## Accessibility
 
-Follows accessibility guidelines for 
-[Modal](https://www.carbondesignsystem.com/components/modal/accessibility), 
-Side panel, Narrow tearsheet, Wide tearsheet, 
-[Forms](https://www.carbondesignsystem.com/patterns/forms-pattern#accessibility), 
-and [Progress indicator](https://www.carbondesignsystem.com/components/progress-indicator/accessibility).
+Follows accessibility guidelines for
+[Modal](https://www.carbondesignsystem.com/components/modal/accessibility), Side
+panel, Narrow tearsheet, Wide tearsheet,
+[Forms](https://www.carbondesignsystem.com/patterns/forms-pattern#accessibility),
+and
+[Progress indicator](https://www.carbondesignsystem.com/components/progress-indicator/accessibility).
 
 ## Related
 
