--- a/src/pages/designing/tutorials.mdx
+++ b/src/pages/designing/tutorials.mdx
@@ -29,7 +29,7 @@ Learn about Carbon and its history. This video covers how the IBM Design
 Language is applied to Carbon, how Carbon interacts with domain level guidance,
 and what it means to be an open source design system.
 
-<Video title="introduction to carbon" vimeoId="457802924" />
+<Video title="Introduction to Carbon" vimeoId="457802924" />
 
 For further learning, check out
 [All about Carbon](/all-about-carbon/what-is-carbon),
