--- a/src/pages/designing/tutorials.mdx
+++ b/src/pages/designing/tutorials.mdx
@@ -53,7 +53,7 @@ Learn about the fundamentals of using our 2x Grid. This video gives an overview
 of basic grid terminology, breakpoints, the three grid modes, and some resources
 to get started designing with the 2x Grid.
 
-<Video title="using 2x grid" vimeoId="457802917" />
+<Video title="Using the 2x grid" vimeoId="457802917" />
 
 You can find detailed grid guidance on the
 [2x Grid](/guidelines/2x-grid/overview) page.
