--- a/src/pages/designing/tutorials.mdx
+++ b/src/pages/designing/tutorials.mdx
@@ -42,7 +42,7 @@ This video covers how to design with components and type styles, and where to
 find relevant guidance and resources while designing. It also goes through the
 steps of getting set up with the Carbon Sketch kits and grid template.
 
-<Video title="designing with carbon" vimeoId="457803206" />
+<Video title="Designing with Carbon" vimeoId="457803206" />
 
 To learn more about our Sketch kits, head over to
 [Design kits](/designing/kits/sketch).
