--- a/src/pages/community/patterns/create-flows/index.mdx
+++ b/src/pages/community/patterns/create-flows/index.mdx
@@ -25,7 +25,16 @@ already exists. Editing a resource is also different from creating a new one.
 This pattern focuses on how to place the user in a flow when there's a need for
 creating a new resource.
 
-Do not use this pattern for adding or editing a resource.
+Do not use this pattern for [adding or editing a resource](#Related-use-cases).
+
+| Type             | Usage       | Context     |
+| ---------------- | ----------- | ----------- |
+| Inline           | `text here` | `text here` |
+| Modal            | `text here` | `text here` |
+| Side-panel       | `text here` | `text here` |
+| Narrow tearsheet | `text here` | `text here` |
+| Wide tearsheet   | `text here` | `text here` |
+| Full page        | `text here` | `text here` |
 
 ## Inline creation
 
@@ -381,9 +390,11 @@ links.
   from the Catalog, or when creating a non-billable resource that could happen
   in a side panel/in context.
 
-## Creation
+## Designing with creation flows
 
-### Behaviors, structure and functionality
+### Behaviors
+
+#### Triggers
 
 A create flow is usually started when the user clicks on a "New `asset type`"
 button. The button text should include the type of asset and a plus icon. For
@@ -399,9 +410,13 @@ button is disabled in the first step. In the last step, the text of the primary
 button changes from "Next" to "Create". The "Next" and "Create" buttons should
 be disabled until the user has entered all required fields.
 
+#### Dismissing flows
+
 The Modal, Side panel, Narrow tearsheet and Wide tearsheet components in a
 create flow will not have a close icon in the top right. This is to enforce the
 user's decision to exit the create flow by clicking on the word "Cancel".
+
+#### Flow completion & loading
 
 When the user clicks "Create" there should be an indication of loading or
 submitting. See Carbon's
@@ -414,15 +429,15 @@ asset's details page. When the user stays on the same page, show a success
 banner notification. For errors, you must show an
 [error notification](https://www.carbondesignsystem.com/components/notification/usage/).
 
-### Other use cases
+## Related use cases
 
-#### Add
+### Add
 
 - While the Create and Add patterns are similar, and ideas can certainly be
   drawn from this pattern, it does not cover Add use cases.
 - The Add pattern should be looked at and worked on separately.
 
-#### Edit
+### Edit
 
 - Similarly, while there are similar concepts in both Create and Edit, this
   pattern does not cover Edit use cases.
