--- a/src/pages/designing/kits/sketch.mdx
+++ b/src/pages/designing/kits/sketch.mdx
@@ -213,7 +213,7 @@ Slide-in panels influence the page layout grid; below are some of the specificat
 
 #### Example
 
-Let’s say we want to create a custom grid for a new design that uses the extra small panel (256px wide) on our x-large 1312px breakpoint. Applying the formula above, your calculations would look like this
+Let’s say we want to create a custom grid for a new design that uses the extra small panel (256px wide) on our x-large 1312px breakpoint. Applying the formula above, your calculations would look like this:
 
 - Breakpoint Width (1312px) = 1312px wide artboard
 - Breakpoint gutter (32px) = 32px Left outside margin and 32px Right outside margin
