Apply suggestions from Jan
Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

--- a/src/pages/designing/kits/sketch.mdx
+++ b/src/pages/designing/kits/sketch.mdx
@@ -191,11 +191,11 @@ The layout settings change depending on which size screen you are designing for.
 
 ### Basic grid
 
-This basic grid is not affected by any influencers and would simply react to the product's breakpoints. Every layout and break points are included in the grid template on the page labeled "Basic grid."
+This basic grid is not affected by any influencers and would simply react to the product's breakpoints. Every layout and break points are included in the grid template on the page labeled "Basic grid".
 
 ### Grids with an influencer
 
-An influencer is a component that affects the content on the page. It can either appears on a page as the result of a user action or be part of your product's page. These [influencers](/guidelines/2x-grid/overview/#grid-influencers) effect the layout grid by scaling and resizing the columns and its content. You can find an assortment of examples of grids with an influences in the grid template file on the page labeled "Grid influencers." 
+An influencer is a component that affects the content on the page. It can either appears on a page as the result of a user action or be part of your product's page. These [influencers](/guidelines/2x-grid/overview/#grid-influencers) effect the layout grid by scaling and resizing the columns and its content. You can find an assortment of examples of grids with an influences in the grid template file on the page labeled "Grid influencers". 
 
 ### Calculating the Sketch grid
 
@@ -203,11 +203,11 @@ An influencer is a component that affects the content on the page. It can either
 
 Slide-in panels influence the page layout grid; below are some of the specifications for panel combinations and how they impact the grid at all sizes.
 
-- Breakpoint Width* = **Artboard Width**
-- Breakpoint Gutter* = **Left and Right Outside Margins**
-- Total Panel Width (“sidebar nav”) + Left outside margin + Right outside margin = **Total Margins**
-- Artboard Width - Total Margins = **Total Width**
-- Total Panel Width + Left margin = **Offset**
+- Breakpoint width* = **Artboard width**
+- Breakpoint gutter* = **Left and right outside margins**
+- Total panel width (“sidebar nav”) + Left outside margin + Right outside margin = **Total margins**
+- Artboard width - Total margins = **Total width**
+- Total panel width + Left margin = **Offset**
 
 *Since we are following the Carbon Design responsive guidelines, we referenced [this table](https://www.carbondesignsystem.com/guidelines/2x-grid/implementation#responsive-options) to determine our common breakpoint widths and respective gutter specs.
 
@@ -215,11 +215,11 @@ Slide-in panels influence the page layout grid; below are some of the specificat
 
 Let’s say we want to create a custom grid for a new design that uses the extra small panel (256px wide) on our x-large 1312px breakpoint. Applying the formula above, your calculations would look like this:
 
-- Breakpoint Width (1312px) = 1312px wide artboard
+- Breakpoint width (1312px) = 1312px wide artboard
 - Breakpoint gutter (32px) = 32px Left outside margin and 32px Right outside margin
-- Total Panel Width (256px) + 16px Left + 16px Right = 288px Total Margins
-- Artboard Width (1312px) - Total Margins (272px) = **1,056px Total Width**
-- Total Panel Width (256px) + 16px Left = **272px Offset**
+- Total panel width (256px) + 16px Left + 16px Right = 288px Total margins
+- Artboard width (1312px) - Total margins (272px) = **1,056px Total width**
+- Total panel width (256px) + 16px Left = **272px Offset**
 
 *If the grid influencer would cause the content view size to be smaller than 1056, then it would follow the next grid breakpoint setting the columns to 8. Which also avoids columns that are smaller than 32.
 
