Update side panel image paths

--- a/src/pages/community/patterns/create-flows/index.mdx
+++ b/src/pages/community/patterns/create-flows/index.mdx
@@ -117,12 +117,7 @@ respectively.
 <Row>
 <Column colLg={8}>
 
-<img
-  src="/images/SidePanelAnatomy.jpg"
-  alt="Anatomy of a create side panel"
-  title="Anatomy of a create side panel"
-  style="padding:3rem; background-color:#e0e0e0"
-/>
+![Anatomy of a create side panel](images/SidePanelAnatomy.png)
 
 </Column>
 </Row>
@@ -141,12 +136,7 @@ respectively.
 <Row>
 <Column colLg={8}>
 
-<img
-  src="/images/SidePanelAlignment.jpg"
-  alt="Alignment of a create side panel"
-  title="Alignment of a create side panel"
-  style="padding:3rem; background-color:#e0e0e0"
-/>
+![Alignment of a create side panel](images/SidePanelAlignment.png)
 
 </Column>
 </Row>
