--- a/src/pages/community/patterns/create-flows/index.mdx
+++ b/src/pages/community/patterns/create-flows/index.mdx
@@ -29,12 +29,12 @@ Do not use this pattern for [adding or editing a resource](#Related-use-cases).
 
 | Type             | Usage       | Context     |
 | ---------------- | ----------- | ----------- |
-| Inline           | `text here` | `text here` |
-| Modal            | `text here` | `text here` |
-| Side-panel       | `text here` | `text here` |
-| Narrow tearsheet | `text here` | `text here` |
-| Wide tearsheet   | `text here` | `text here` |
-| Full page        | `text here` | `text here` |
+| Inline           | Use with quick, simple creations like that of an item. | On-page content can be seen and interacted with. |
+| Modal            | Use with simple or transitional creations with no more than a couple of form fields. | On-page content is obscured. |
+| Side-panel       | Use with medium complexity creations if the user needs page context. | On-page content can be seen and interacted with. |
+| Narrow tearsheet | Use with medium complexity creations. | On-page content is obscured. |
+| Wide tearsheet   | Use with complex or interactive creations. | On-page content is obscured. |
+| Full page        | Use with creations that must be completed in order for a service to be usable. | N/A |
 
 ## Inline creation
 
@@ -259,8 +259,8 @@ options" will replace the progress indicator with the In-page navigation anchor
 links. Depending on your use case, you may choose to persist the toggle to show
 all options for a particular Create flow if it will enhance the user experience.
 
-If the user toggles off the advanced options, show a modal alerting them that
-the changes won't be saved.
+If the user toggles off the advanced options and there could be destructive 
+consequences, show a modal alerting them that the changes won't be saved.
 
 <Row>
 <Column colLg={8}>
@@ -285,7 +285,7 @@ the changes won't be saved.
 
 ![Toggle view - hide all available options warning modal](images/WideTearsheetConfirmModal.jpg)
 
-<Caption>Toggle view - hide all available options warning modal</Caption>
+<Caption>Toggle view - hide all available options warning modal (when needed)</Caption>
 </Column>
 </Row>
 
