docs: adding section as L1

--- a/src/pages/case-studies/ibm-commerce-platform.mdx
+++ b/src/pages/case-studies/ibm-commerce-platform.mdx
@@ -1,9 +1,8 @@
 ---
-title: IBM.com case study
+title: IBM commerce platform
 description:
   This case study examines the adoption of Carbon for the design and development
   of the new self-service purchase experience on IBM.com.
-tabs: ['Overview', 'IBM.com case study']
 ---
 
 <PageDescription>
