--- a/src/pages/designing/kits/sketch.mdx
+++ b/src/pages/designing/kits/sketch.mdx
@@ -17,7 +17,7 @@ resources you need to get started.
 
 <AnchorLink>Get the kit</AnchorLink>
 <AnchorLink>Start designing</AnchorLink>
-<AnchorLink>Anatomy</AnchorLink>
+<AnchorLink>How to use</AnchorLink>
 <AnchorLink>Info</AnchorLink>
 
 </AnchorLinks>
@@ -111,6 +111,9 @@ Visit the
 [Sketch library](https://www.sketch.com/s/3a3f3f2d-94d7-4c16-8e2e-88ba80a6382e)
 page and choose `Download Document` from the right-side panel.
 
+Open the file in Sketch. Navigate to `File → Save as Template`. You can now
+access the saved grid template at `File → New file from Template`.
+
 <Row className="resource-card-group">
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
@@ -127,12 +130,6 @@ page and choose `Download Document` from the right-side panel.
     </ResourceCard>
   </Column>
 </Row>
-
-<br />
-<br />
-
-Open the file in Sketch. Navigate to `File → Save as Template`. You can now
-access the saved grid template at `File → New file from Template`.
 
 ## Start designing
 
@@ -155,11 +152,7 @@ accessible from any Sketch document. Navigate to
 Refer to the content below for a more detailed breakdown of the kit, or head to
 Sketch to begin designing.
 
-## Anatomy
-
-See the
-[Sketch library](https://www.sketch.com/s/557b75ff-67d3-41ab-ada5-fa25447218c1)
-page for an overview of the kit.
+## How to use
 
 <AnchorLinks small>
 
@@ -172,26 +165,63 @@ page for an overview of the kit.
 
 ### Grid
 
-The IBM 2x Grid is the framework for laying out all visual elements in Carbon.
+The [IBM 2x Grid](/guidelines/2x-grid/overview/) is fundamental to everything we design. It is the geometric foundation of all the visual elements in the IBM Design Language, from typography to columns, boxes, icons, and illustrations. The grid provides structure and guidance for all creative decision-making.
 
 ![2x Grid overview](/images/grid-2.gif)
 
 <Caption>2x Grid overview</Caption>
 
-All designs should start with the 2x Grid template. Once you have
-[saved the grid](#get-the-kit) as a template, navigate to
-`File → New file from Template` and select the grid template.
+#### Getting started
+All designs should start with the 2x Grid. Once you have [saved the grid](/designing/kits/sketch/#get-the-kit) as a template, in Sketch navigate to **File → New file from Template** and select the `IBM Grid template` to open a new document with preset grid artboards. Either begin working in the new file or copy/paste an artboard into your working file. 
 
-See our [layout guidelines](/guidelines/2x-grid/overview) for a more detailed
-walkthrough of the 2x Grid.
+#### Layout
 
-#### Structure
+The grid layout feature controls and shows the 2x grid columns, gutters, and page margins. To create or edit the layout go to **View → Canvas → Layout Settings...**. 
 
-The grid template includes templates for all breakpoints along with the
-necessary formulas to design for custom screen sizes.
+To toggle seeing the 2x grid columns on an artboard go to **View → Show layout** or use the keyboard shortcut  `Control+L`.
 
-To toggle the grid on and off, use `Control+G`. To toggle the layout guide, use
-`Control+L`.
+#### Grid
+
+To toggle seeing the mini unit grid go to **View → Show grid** or use the keyboard shortcut `Control+G`.
+
+#### Breakpoints
+
+The layout settings change depending on which size screen you are designing for. See [breakpoints](https://www.carbondesignsystem.com/guidelines/2x-grid/overview/#breakpoints).
+
+
+### Basic grid
+
+This basic grid is not affected by any influencers and would simply react to the product's breakpoints. Every layout and break points are included in the grid template on the page labeled "Basic grid".
+
+### Grids with an influencer
+
+An influencer is a component that affects the content on the page. It can either appears on a page as the result of a user action or be part of your product's page. These [influencers](/guidelines/2x-grid/overview/#grid-influencers) effect the layout grid by scaling and resizing the columns and its content. You can find an assortment of examples of grids with an influences in the grid template file on the page labeled "Grid influencers". 
+
+### Calculating the Sketch grid
+
+#### Sketch layout settings
+
+Slide-in panels influence the page layout grid; below are some of the specifications for panel combinations and how they impact the grid at all sizes.
+
+- Breakpoint width* = **Artboard width**
+- Breakpoint gutter* = **Left and right outside margins**
+- Total panel width (“sidebar nav”) + Left outside margin + Right outside margin = **Total margins**
+- Artboard width - Total margins = **Total width**
+- Total panel width + Left margin = **Offset**
+
+*Since we are following the Carbon Design responsive guidelines, we referenced [this table](https://www.carbondesignsystem.com/guidelines/2x-grid/implementation#responsive-options) to determine our common breakpoint widths and respective gutter specs.
+
+#### Example
+
+Let’s say we want to create a custom grid for a new design that uses the extra small panel (256px wide) on our x-large 1312px breakpoint. Applying the formula above, your calculations would look like this:
+
+- Breakpoint width (1312px) = 1312px wide artboard
+- Breakpoint gutter (32px) = 32px Left outside margin and 32px Right outside margin
+- Total panel width (256px) + 16px Left + 16px Right = 288px Total margins
+- Artboard width (1312px) - Total margins (272px) = **1,056px Total width**
+- Total panel width (256px) + 16px Left = **272px Offset**
+
+*If the grid influencer would cause the content view size to be smaller than 1056, then it would follow the next grid breakpoint setting the columns to 8. Which also avoids columns that are smaller than 32.
 
 ### Symbols
 
@@ -206,8 +236,7 @@ There are two kinds of symbols — library symbols and document symbols. Library
 symbols are available in any Sketch document, while document symbols are
 specific to the document in which they are found.
 
-From the `Insert` menu, select `Symbols → Carbon Design System` to add symbols
-onto your page.
+From the main menu select **Insert → Symbols → Carbon Design System** then select the desired symbol to add onto your page.
 
 Carbon symbols are built to be flexible, and designers should not detach symbols
 from the library. Once a symbol is detached, you will no longer receive updates
@@ -234,7 +263,7 @@ Text styles are based on typography rules defined by the
 
 #### Library menu navigation
 
-From the main menu select `Insert → Text Styles → Carbon Design System` to
+From the main menu select **Insert → Text Styles → Carbon Design System** to
 insert a Carbon type token text style.
 
 Text styles within components are carefully considered. We do not recommend
